kubernetes/backend/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: minikube.backend
  namespace: biblioteca
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000 # Puerto svc
      targetPort: 8000 # Puerto del contenedor del Pod
  type: ClusterIP
