kubernetes/backend/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: biblioteca
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /biblioteca1/v1/$2 
spec:
  rules:
  - host: minikube.backend
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8000
